--- a/home/style.scss
+++ b/home/style.scss
@@ -76,15 +76,6 @@ header {
             padding-left: 15px;
             width: 100%;
         }
-
-        .search-bar__btn {
-            background-color: $primary-color;
-            border: 0;
-            border-radius: 0 2px 2px 0;
-            padding-left: 24px;
-            padding-right: 24px;
-            padding: 2px 24px 0 24px;
-        }
     }
 
     .header__login {
@@ -117,6 +108,19 @@ header {
         }
     }
     
+}
+
+.input-btn {
+    background-color: $primary-color;
+    border: 0;
+    border-radius: 0 2px 2px 0;
+    padding: 2px 24px 0 24px;
+
+    &--email {
+        padding-top: 9px;
+        padding-bottom: 9px;
+        height: 100%;
+    }
 }
 
 nav {
@@ -162,15 +166,17 @@ aside {
         margin-left: $left-space;
         position: relative;
         z-index: 1;
+        
 
         .aside-text__title {
-        font-family: 'Eczar';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 50px;
-        line-height: 130%;
-        color: white;
-        margin-bottom: 10px;
+            font-family: 'Eczar';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 50px;
+            line-height: 130%;
+            color: white;
+            margin-bottom: 10px;
+            filter: drop-shadow(2px 3px 0px rgba(35, 31, 32, 0.5));
         }
 
         .aside-text__subtitle {
@@ -181,30 +187,38 @@ aside {
             line-height: 23px;
             color: #FFFFFF;
             margin-bottom: 30px;
+            filter: drop-shadow(2px 3px 0px rgba(35, 31, 32, 0.5));
         }
+    }
+}
 
-        .aside-text__btn {
-            background-color: $primary-color;
-            border: 0;
-            color: white;
-            font-family: 'Raleway';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 14px;
-            line-height: 16px;
-            padding: 10px 16px;
-            border-radius: 2px;
-        }
+.btn {
+    background-color: $primary-color;
+    border: 0;
+    color: white;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    padding: 10px 16px;
+    border-radius: 2px;
+
+    &--right {
+        margin-left: auto;
     }
 }
 
 .dots {
     display: flex;
     gap: 30px;
-    align-self: flex-end;
-    margin-bottom: 40px;
     position: relative;
     z-index: 1;
+
+    &--align-self {
+        align-self: flex-end;
+        margin-bottom: 40px;
+    }
 
     .dots__dot {
         width: 10px;
@@ -220,48 +234,55 @@ aside {
 }
 
 main {
+    background: linear-gradient(0deg, rgba(35, 31, 32, 0.7), rgba(35, 31, 32, 0.7)), linear-gradient(175.6deg, #231F20 10.94%, #94171C 100%);
     width: 100%;
-    background-color: #231F20;
     padding: 0 $left-space 69px $left-space;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-    section {
+    .section__head {
         padding-top: 100px;
+        display: flex;
+        align-items: baseline;
+        gap: 30px;
+        margin-bottom: 60px;
+        align-self: flex-start;
 
-        .section__head {
-            display: flex;
-            align-items: baseline;
-            gap: 30px;
-            margin-bottom: 60px;
-
-            .section__title {
-                font-family: 'Raleway';
-                font-style: normal;
-                font-weight: 800;
-                font-size: 38px;
-                line-height: 45px;
-                color: white;
-            }
-    
-            .section__link {
-                font-family: 'Raleway';
-                font-style: normal;
-                font-weight: 700;
-                font-size: 14px;
-                line-height: 16px;
-                color: $primary-color;
-            }
+        .section__title {
+            font-family: 'Raleway';
+            font-style: normal;
+            font-weight: 800;
+            font-size: 38px;
+            line-height: 45px;
+            color: white;
         }
-        
+
+        .section__link {
+            font-family: 'Raleway';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 16px;
+            color: $primary-color;
+        }
     }
 
     .cards-section {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        align-self: normal;
+        margin-bottom: 30px;
 
         .card {
+            width: min-content;
 
             .card-img {
                 background-color: white;
                 padding: 16px;
                 width: 255px;
+                border-radius: 2px 2px 0 0;
             }
 
             .card-text {
@@ -285,7 +306,6 @@ main {
                     font-weight: 700;
                     font-size: 10px;
                     line-height: 12px;
-                    /*color: $tertiary-color;*/
                     color: white;
                     opacity: 0.6;
                 }
@@ -297,7 +317,370 @@ main {
                 justify-content: space-between;
                 align-items: center;
                 padding: 10px 16px 10px 16px;
+                border-radius: 0 0 2px 2px;
+
+                .card-footer__icons {
+                    display: flex;
+                    gap: 24px;
+                    align-items: center;
+
+                    .check-icon_full {
+                        width: 20px;
+                        height: 20px;
+                        margin: 2px;
+                    }
+
+                    .card-footer__check-icon {
+                        position: relative;
+
+                        .check-icon__border {
+                            opacity: 0.6;
+                        }
+
+                        .check-icon__full {
+                            position: absolute;
+                            left: 0;
+                            right: 0;
+                            opacity: 0.2;
+                        }
+                    }
+
+                    .card-footer__favorite-icon {
+                        position: relative;
+
+                        .favorite-icon__border {
+                            opacity: 0.6;
+                        }
+
+                        .favorite-icon__full-white {
+                            position: absolute;
+                            left: 0;
+                            right: 0;
+                            opacity: 0.2;
+
+                            &--selected {
+                                opacity: 1;
+                                position: initial;
+                            }
+                        }
+                    }
+                }
+
+                .card-footer__price {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-end;
+                    gap: 2px;
+
+                    .card__old-price {
+                        font-family: 'Raleway';
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 12px;
+                        line-height: 14px;
+                        color: white;
+                        opacity: 0.6;
+                        text-decoration: line-through;
+                    }
+
+                    .card__new-price {
+                        font-family: 'Raleway';
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 20px;
+                        line-height: 23px;
+                        color: white;
+                    }
+                }
             }
         }
     }
+
+    .articles-section {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        row-gap: 30px;
+
+        .article-card {
+            width: min-content;
+            display: flex;
+            flex-direction: column;
+
+            .article-card__img {
+                border-radius: 2px 2px 0 0;
+            }
+
+            .article-card__txt {
+                background-color: $secondary-color;
+                border-radius: 0px 0px 2px 2px;
+                padding: 16px;
+
+                .article-card__tag {
+                    font-family: 'Raleway';
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 10px;
+                    line-height: 12px;
+                    color: white;
+                    opacity: 0.6;
+                    margin-bottom: 20px;
+                }
+
+                .article-card__title {
+                    font-family: 'Raleway';
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 16px;
+                    line-height: 19px;
+                    color: white;
+                    margin-bottom: 20px;
+                }
+
+                .article-card__body {
+                    font-family: 'Raleway';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 149.5%;
+                    color: white;
+                }
+
+                .article-card__date {
+                    font-family: 'Raleway';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 12px;
+                    line-height: 14px;
+                    color: white;
+                    opacity: 0.6;
+                    margin-top: 12px;
+                    margin-left: auto;
+                    width: max-content;
+                }
+            }
+            
+        }
+    }
+
+    .sets-section {
+        display: flex;
+        gap: 25px;
+        align-self: normal;
+
+        .main-set-card {
+            border: 2px solid white;
+            border-radius: 4px;
+            height: max-content;
+        }
+
+        .set-cards {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            row-gap: 30px;
+        }
+
+        .set-card {
+            display: flex;
+            flex-direction: column;
+
+            .set-card__img {
+                border-radius: 2px 2px 0 0;
+            }
+
+            .set-card__body {
+                display: flex;
+                background-color: $secondary-color;
+                padding: 15px;
+                border-radius: 0 0 2px 2px;
+
+                .set-card__txt {
+                    margin-left: 10px;
+
+                    .set-card__title {
+                        font-family: 'Raleway';
+                        font-style: normal;
+                        font-weight: 600;
+                        font-size: 16px;
+                        line-height: 19px;
+                        color: white;
+                        margin-bottom: 5px;
+                    }
+    
+                    .set-card__date {
+                        font-family: 'Open Sans';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 10px;
+                        line-height: 14px;
+                        color: white;
+                        opacity: 0.6;
+                    }
+                }
+            }
+        }
+    }
+
+    .event-section {
+        display: flex;
+        justify-content: space-around;
+        align-self: normal;
+
+        .event-card {
+            display: flex;
+            flex-direction: column;
+
+            .event-card__img {
+                border-radius: 2px 2px 0 0; 
+            }
+            .event-card__txt{
+                background-color: $secondary-color;
+                padding: 16px;
+                border-radius: 0 0 2px 2px;
+
+                .event-card__title {
+                    font-family: 'Raleway';
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 16px;
+                    line-height: 19px;
+                    color: white;
+                    margin-bottom: 5px;
+                }
+
+                .event-card__subtitle {
+                    font-family: 'Open Sans';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 10px;
+                    line-height: 14px;
+                    color: white;
+                    opacity: 0.6;
+                    text-transform: uppercase;
+                }
+            }
+        }
+    }
+
+    .newsletter {
+        padding-top: 170px;
+        text-align: center;
+        width: 64%;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        align-items: center;
+    }
+}
+
+.newsletter__title {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    color: white;
+}
+
+.newsletter__body {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: white;
+}
+
+.email-bar {
+    display: flex;
+    width: 50%;
+
+    &--footer {
+        margin-top: 20px;
+        width: 100%;
+    }
+
+    .email-bar__txt {
+        border: 0;
+        font-family: 'Raleway';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 149.5%;
+        border-radius: 2px 0 0 2px;
+        padding: 8px 15px 7px 15px;
+        width: 100%;
+    }
+}
+
+footer {
+    border-top: 3px solid $primary-color;
+    background-color: #231F20;
+    
+    padding: 60px $left-space 60px $left-space;
+
+    .top-footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+
+        .newsletter-footer {
+            flex-basis: 30%
+        }
+    
+        .link-list-container {
+            display: flex;
+            justify-content: space-around;
+            flex-basis: 64%;
+    
+            .footer-list {
+                list-style: none;
+                display: flex;
+                flex-direction: column;
+                color: #FFFFFF;
+                font-family: 'Raleway';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 16px;
+                justify-content: space-between;
+                gap: 15px;
+            }
+        }
+     
+    }
+
+    .bottom-footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 65px;
+
+        .bottom-footer__link {
+            display: flex;
+            font-family: 'Raleway';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 14px;
+            color: white;
+            opacity: 0.6;
+            gap: 23px;
+            
+            a {
+                text-decoration: underline;
+            }
+        }
+
+        .social-icons {
+            display: flex;
+            gap: 20px;
+
+            img {
+                height: 20px;
+            }
+        }
+    }
+       
 }
