--- a/home/style.css
+++ b/home/style.css
@@ -39,13 +39,21 @@ header {
   gap: 30px;
 }
 
+header .header__burger-icon {
+  display: none;
+}
+
 header .header__logo {
-  height: 22px;
+  height: 24px;
+  width: 181px;
 }
 
 header .header__cart-icon {
   height: 20px;
   margin-left: auto;
+  -webkit-box-ordinal-group: 5;
+      -ms-flex-order: 4;
+          order: 4;
 }
 
 header .header__search-bar {
@@ -302,6 +310,10 @@ main .section__head .section__title {
   font-size: 38px;
   line-height: 45px;
   color: white;
+}
+
+main .section__head .section__title--uppercase {
+  text-transform: uppercase;
 }
 
 main .section__head .section__link {
@@ -584,6 +596,10 @@ main .sets-section .set-card {
           flex-direction: column;
 }
 
+main .sets-section .set-card--hidden {
+  display: none;
+}
+
 main .sets-section .set-card .set-card__img {
   border-radius: 2px 2px 0 0;
 }
@@ -825,4 +841,212 @@ footer .bottom-footer .social-icons {
 
 footer .bottom-footer .social-icons img {
   height: 20px;
+}
+
+@media (max-width: 400px) {
+  header {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 15px;
+    row-gap: 20px;
+  }
+  header .header__burger-icon {
+    display: initial;
+  }
+  header .header__logo {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  header .header__login {
+    display: none;
+  }
+  header .header__cart-icon {
+    -webkit-box-ordinal-group: initial;
+        -ms-flex-order: initial;
+            order: initial;
+    margin-left: initial;
+  }
+  header .header__search-bar {
+    -ms-flex-preferred-size: initial;
+        flex-basis: initial;
+  }
+  header .header__search-bar .search-bar__filter {
+    display: none;
+  }
+  header .header__search-bar .search-bar__text {
+    padding: 8px 15px 7px 15px;
+    border-radius: 2px 0 0 2px;
+  }
+  .input-btn {
+    padding-left: 9px;
+    padding-right: 9px;
+  }
+  .input-btn--email {
+    padding-left: 23px;
+    padding-right: 21px;
+  }
+  nav {
+    padding-left: 15px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    overflow: hidden;
+  }
+  nav .nav__link {
+    white-space: nowrap;
+  }
+  aside {
+    background-image: url("..//assets/aside-mobile.png");
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  aside .aside-text {
+    margin-left: 15px;
+    margin-top: 20px;
+    width: auto;
+  }
+  aside .aside-text .aside-text__title {
+    font-size: 30px;
+  }
+  aside .aside__gradient {
+    opacity: 0.5;
+    height: 100%;
+  }
+  aside .dots--align-self {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin-top: 60px;
+  }
+  main {
+    padding: 0 0 69px 15px;
+  }
+  main .section__head {
+    margin-top: 60px;
+    margin-bottom: 30px;
+  }
+  main .section__head--hidden {
+    display: none;
+  }
+  main .section__head .section__title {
+    font-size: 30px;
+    line-height: 35px;
+  }
+  main .cards-section {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    overflow: scroll;
+  }
+  main .cards-section--hidden {
+    display: none;
+  }
+  main .cards-section .card {
+    margin-right: 30px;
+  }
+  main .cards-section::-webkit-scrollbar {
+    display: none;
+  }
+  main .dots {
+    display: none;
+  }
+  main .section__head .section__title--uppercase {
+    text-transform: initial;
+  }
+  main .articles-section {
+    margin-right: auto;
+  }
+  main .sets-section .main-set-card--hidden {
+    display: none;
+  }
+  main .sets-section .set-cards::-webkit-scrollbar {
+    display: none;
+  }
+  main .sets-section .set-cards {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    overflow-x: scroll;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  main .sets-section .set-cards .set-card {
+    margin-right: 30px;
+  }
+  main .sets-section .set-cards .set-card--hidden {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  main .sets-section .set-cards .set-card .set-card__img {
+    height: 200px;
+    min-width: 265px;
+  }
+  main .event-section {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 30px;
+    margin-right: 15px;
+  }
+  main .newsletter {
+    padding-top: 120px;
+    width: initial;
+    margin-right: 15px;
+  }
+  .email-bar {
+    width: 100%;
+  }
+  footer {
+    padding: 30px 15px;
+  }
+  footer .top-footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+  footer .top-footer .newsletter-footer {
+    width: 100%;
+  }
+  footer .top-footer .link-list-container {
+    margin-top: 50px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 15px;
+  }
+  footer .bottom-footer {
+    margin-top: 32px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    gap: 52px;
+    text-align: center;
+  }
+  footer .bottom-footer .bottom-footer__link {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  footer .bottom-footer .bottom-footer__link p {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
