--- a/home/style.scss
+++ b/home/style.scss
@@ -32,13 +32,19 @@ header {
     justify-content: flex-start;
     gap: 30px;
 
+    .header__burger-icon {
+        display: none;
+    }
+
     .header__logo {
-        height: 22px;
+        height: 24px;
+        width: 181px;
     }
 
     .header__cart-icon {
         height: 20px;
         margin-left: auto;
+        order: 4;
     }
 
     .header__search-bar {
@@ -256,6 +262,10 @@ main {
             font-size: 38px;
             line-height: 45px;
             color: white;
+
+            &--uppercase {
+                text-transform: uppercase;
+            }
         }
 
         .section__link {
@@ -485,6 +495,10 @@ main {
             display: flex;
             flex-direction: column;
 
+            &--hidden {
+                display: none;
+            }
+
             .set-card__img {
                 border-radius: 2px 2px 0 0;
             }
@@ -683,4 +697,226 @@ footer {
         }
     }
        
+}
+
+@media (max-width: 400px) {
+
+    header {
+        flex-wrap: wrap;
+        padding: 15px;
+        row-gap: 20px;
+
+        .header__burger-icon {
+            display: initial;
+        }
+
+        .header__logo {
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .header__login {
+            display: none;
+        }
+
+        .header__cart-icon {
+            order: initial;
+            margin-left: initial;
+        }
+
+        .header__search-bar {
+            flex-basis: initial;
+
+            .search-bar__filter {
+                display: none;
+            }
+
+            .search-bar__text {
+                padding: 8px 15px 7px 15px;
+                border-radius: 2px 0 0 2px;
+            }
+        }
+    }
+
+    .input-btn {
+        padding-left: 9px;
+        padding-right: 9px;
+
+        &--email {
+            padding-left: 23px;
+            padding-right: 21px;
+        }
+    }
+
+    nav {
+        padding-left: 15px;
+        align-items: center;
+        overflow: hidden;
+
+        .nav__link {
+            white-space: nowrap;
+        }
+    }
+
+    aside {
+        background-image: url('..//assets/aside-mobile.png');
+        flex-direction: column;
+        justify-content: center;
+
+        .aside-text {
+            margin-left: 15px;
+            margin-top: 20px;
+            width: auto;
+
+            .aside-text__title {
+                font-size: 30px;
+            }
+        }
+
+        .aside__gradient {
+            opacity: 0.5;
+            height: 100%;
+        }
+
+        .dots {
+            &--align-self {
+                align-self: center;
+                margin-top: 60px;
+            }
+        }
+    }
+
+    main {
+        padding: 0 0 69px 15px;
+
+        .section__head {
+            margin-top: 60px;
+            margin-bottom: 30px;
+
+            &--hidden {
+                display: none;
+            }
+
+            .section__title {
+                font-size: 30px;
+                line-height: 35px;
+            }
+        }
+        .cards-section {
+            flex-wrap: nowrap;
+            justify-content: flex-start;
+            overflow: scroll;
+
+            &--hidden {
+                display: none;
+            }
+
+            .card {
+                margin-right: 30px;
+            }
+        }
+
+        .cards-section::-webkit-scrollbar {
+            display: none;
+        }
+
+        .dots {
+            display: none;
+        }
+
+        .section__head {
+            .section__title {
+                &--uppercase {
+                    text-transform: initial;
+                }
+        }
+        
+        }
+        .articles-section {
+            margin-right: auto;
+        }
+
+        .sets-section {
+
+            .main-set-card {
+                
+                &--hidden {
+                    display: none;
+                }
+            }
+            .set-cards::-webkit-scrollbar {
+                display: none;
+            }
+
+            .set-cards {
+                flex-wrap: nowrap;
+                overflow-x: scroll;
+                justify-content: flex-start;
+                
+                .set-card {
+                    margin-right: 30px;
+
+                    &--hidden {
+                        display: flex;
+                    }
+
+                    .set-card__img {
+                        height: 200px;
+                        min-width: 265px;
+                    }
+                }
+            }
+        }
+
+        .event-section {
+            flex-direction: column;
+            gap: 30px;
+            margin-right: 15px;
+        }
+
+        .newsletter {
+            padding-top: 120px;
+            width: initial;
+            margin-right: 15px;   
+        }
+    }
+
+    .email-bar {
+        width: 100%;    
+    }
+    
+    footer {
+        padding: 30px 15px;
+
+        .top-footer {
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+
+            .newsletter-footer {
+                width: 100%;
+            }
+
+            .link-list-container {
+                margin-top: 50px;
+                flex-direction: column;
+                gap: 15px;
+            }
+        }
+
+        .bottom-footer {
+            margin-top: 32px;
+            flex-direction: column-reverse;
+            gap: 52px;
+            text-align: center;
+
+            .bottom-footer__link {
+                flex-wrap: wrap;
+                justify-content: center;
+                p {
+                    flex-basis: 100%;
+                }
+            }
+        }
+    }
 }
