--- a/search-result/style.css
+++ b/search-result/style.css
@@ -175,8 +175,10 @@ nav .nav__link--first {
 }
 
 main {
+  background: linear-gradient(0deg, rgba(35, 31, 32, 0.7), rgba(35, 31, 32, 0.7)), linear-gradient(175.6deg, #231F20 10.94%, #94171C 100%);
   position: relative;
-  padding: 30px 0 110px 12%;
+  padding: 30px 12% 110px 12%;
+  z-index: 0;
 }
 
 main .landing-bg {
@@ -216,11 +218,23 @@ main h1 {
   margin-bottom: 100px;
 }
 
+main .results-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+}
+
+main .results-container .mini-results-filter {
+  display: none;
+}
+
 main .results-container .results-filter {
   background-color: #313439;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+  padding-bottom: 15px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 main .results-container .results-filter .results-filter__header {
@@ -261,7 +275,7 @@ main .results-container .results-filter .filter-selector .filter-selector__selec
   border: 0;
   border-radius: 2px;
   padding: 10px 15px;
-  padding-right: 6rem;
+  min-width: 255px;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
@@ -307,4 +321,572 @@ main .results-container .results-filter .filter-language .filter-language__check
 main .results-container .results-filter .filter-slider {
   margin-top: 30px;
   margin-left: 15px;
+}
+
+main .results-container .results-filter .filter-slider .filter-slider__prices {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-right: 15px;
+  margin-top: 10px;
+  color: white;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+main .results-container .results-filter .clear-btn {
+  background-color: #AE1B21;
+  border-radius: 2px;
+  padding: 12px 80px;
+  color: white;
+  border: 0;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 16px;
+  margin-top: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+main .results-container .cards-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-item-align: normal;
+      align-self: normal;
+  margin-bottom: 30px;
+}
+
+main .results-container .cards-section .card {
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+}
+
+main .results-container .cards-section .card .card-img {
+  background-color: white;
+  padding: 16px;
+  width: 255px;
+  border-radius: 2px 2px 0 0;
+}
+
+main .results-container .cards-section .card .card-text {
+  background-color: #22262E;
+  padding: 16px 16px 18px 16px;
+  width: 100%;
+}
+
+main .results-container .cards-section .card .card-text .card-text__title {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  color: white;
+}
+
+main .results-container .cards-section .card .card-text .card-text-lang {
+  display: none;
+}
+
+main .results-container .cards-section .card .card-text .card-text__type {
+  margin-top: 26px;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 12px;
+  color: white;
+  opacity: 0.6;
+}
+
+main .results-container .cards-section .card .card-footer {
+  background-color: #313439;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 16px 10px 16px;
+  border-radius: 0 0 2px 2px;
+}
+
+main .results-container .cards-section .card .card-footer .card-footer__icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 24px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main .results-container .cards-section .card .card-footer .card-footer__icons .check-icon_full {
+  width: 20px;
+  height: 20px;
+  margin: 2px;
+}
+
+main .results-container .cards-section .card .card-footer .card-footer__icons .card-footer__check-icon {
+  position: relative;
+}
+
+main .results-container .cards-section .card .card-footer .card-footer__icons .card-footer__check-icon .check-icon__border {
+  opacity: 0.6;
+}
+
+main .results-container .cards-section .card .card-footer .card-footer__icons .card-footer__check-icon .check-icon__full {
+  position: absolute;
+  left: 0;
+  right: 0;
+  opacity: 0.2;
+}
+
+main .results-container .cards-section .card .card-footer .card-footer__icons .card-footer__favorite-icon {
+  position: relative;
+}
+
+main .results-container .cards-section .card .card-footer .card-footer__icons .card-footer__favorite-icon .favorite-icon__border {
+  opacity: 0.6;
+}
+
+main .results-container .cards-section .card .card-footer .card-footer__icons .card-footer__favorite-icon .favorite-icon__full-white {
+  position: absolute;
+  left: 0;
+  right: 0;
+  opacity: 0.2;
+}
+
+main .results-container .cards-section .card .card-footer .card-footer__icons .card-footer__favorite-icon .favorite-icon__full-white--selected {
+  opacity: 1;
+  position: initial;
+}
+
+main .results-container .cards-section .card .card-footer .card-footer__price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  gap: 2px;
+}
+
+main .results-container .cards-section .card .card-footer .card-footer__price .card__old-price {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 14px;
+  color: white;
+  opacity: 0.6;
+  text-decoration: line-through;
+}
+
+main .results-container .cards-section .card .card-footer .card-footer__price .card__new-price {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  color: white;
+}
+
+main .page-navigation {
+  margin-top: 70px;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+main .page-navigation .page-navigation__prev-next {
+  opacity: 0.6;
+}
+
+main .page-navigation ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  list-style: none;
+  -ms-flex-preferred-size: 49%;
+      flex-basis: 49%;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+main .page-navigation ul .page-navigation__number {
+  font-weight: 400;
+  opacity: 0.6;
+}
+
+main .page-navigation ul .page-navigation__number--selected {
+  font-weight: 700;
+  opacity: 1;
+}
+
+.newsletter__title {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  color: white;
+}
+
+.newsletter__body {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: white;
+}
+
+.email-bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50%;
+}
+
+.email-bar--footer {
+  margin-top: 20px;
+  width: 100%;
+}
+
+.email-bar .email-bar__txt {
+  border: 0;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 149.5%;
+  border-radius: 2px 0 0 2px;
+  padding: 8px 15px 7px 15px;
+  width: 100%;
+}
+
+footer {
+  border-top: 3px solid #AE1B21;
+  background-color: #231F20;
+  padding: 60px 12% 60px 12%;
+}
+
+footer .top-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+footer .top-footer .newsletter-footer {
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+}
+
+footer .top-footer .link-list-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-preferred-size: 64%;
+      flex-basis: 64%;
+}
+
+footer .top-footer .link-list-container .footer-list {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: #FFFFFF;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 15px;
+}
+
+footer .bottom-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 65px;
+}
+
+footer .bottom-footer .bottom-footer__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
+  color: white;
+  opacity: 0.6;
+  gap: 23px;
+}
+
+footer .bottom-footer .bottom-footer__link a {
+  text-decoration: underline;
+}
+
+footer .bottom-footer .social-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+
+footer .bottom-footer .social-icons img {
+  height: 20px;
+}
+
+@media (max-width: 400px) {
+  header {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 15px;
+    row-gap: 20px;
+  }
+  header .header__burger-icon {
+    display: initial;
+  }
+  header .header__logo {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  header .header__login {
+    display: none;
+  }
+  header .header__cart-icon {
+    -webkit-box-ordinal-group: initial;
+        -ms-flex-order: initial;
+            order: initial;
+    margin-left: initial;
+  }
+  header .header__search-bar {
+    -ms-flex-preferred-size: initial;
+        flex-basis: initial;
+  }
+  header .header__search-bar .search-bar__filter {
+    display: none;
+  }
+  header .header__search-bar .search-bar__text {
+    padding: 8px 15px 7px 15px;
+    border-radius: 2px 0 0 2px;
+  }
+  .input-btn {
+    padding-left: 9px;
+    padding-right: 9px;
+  }
+  .input-btn--email {
+    padding-left: 23px;
+    padding-right: 21px;
+  }
+  nav {
+    padding-left: 15px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    overflow: hidden;
+  }
+  nav .nav__link {
+    white-space: nowrap;
+  }
+  main {
+    padding: 30px 15px 70px 15px;
+  }
+  main .landing-bg {
+    height: 500px;
+    width: 100%;
+    -o-object-fit: fill;
+       object-fit: fill;
+  }
+  main h1 {
+    font-size: 30px;
+    line-height: 130%;
+  }
+  main .results-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  main .results-container .results-filter {
+    display: none;
+  }
+  main .results-container .mini-results-filter {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: #22262E;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding: 15px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  main .results-container .mini-results-filter .mini-results-filter__header {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 16px;
+    color: white;
+  }
+  main .results-container .mini-results-filter .mini-results-filter__icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-item-align: normal;
+        align-self: normal;
+  }
+  main .results-container .mini-results-filter .mini-results-filter__icons .mini-results-filter__break-line {
+    height: 100%;
+    width: 1px;
+    background-color: white;
+    margin-left: 10px;
+  }
+  main .results-container .mini-results-filter .mini-results-filter__icons .mini-results-filter__icon {
+    width: 24px;
+    height: 24px;
+    margin-left: 10px;
+  }
+  main .results-container .mini-results-filter .mini-results-filter__icons .mini-results-filter__icon--last {
+    margin-left: 32px;
+  }
+  main .results-container .cards-section .card {
+    width: 100%;
+  }
+  main .results-container .cards-section .card .card-img {
+    width: initial;
+  }
+  main .results-container .cards-section .card .card-img img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  main .results-container .cards-section .card .card-text .card-text-lang {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 10px;
+    margin-top: 39px;
+  }
+  main .results-container .cards-section .card .card-text .card-text-lang .card-text-lang__box {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12px;
+    color: white;
+    padding: 3px 10px;
+    border: 1px solid white;
+    border-radius: 2px;
+  }
+  main .page-navigation {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+  main .page-navigation ul {
+    display: none;
+  }
+  footer {
+    padding: 30px 15px;
+  }
+  footer .top-footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+  footer .top-footer .newsletter-footer {
+    width: 100%;
+  }
+  footer .top-footer .link-list-container {
+    margin-top: 50px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 15px;
+  }
+  footer .bottom-footer {
+    margin-top: 32px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    gap: 52px;
+    text-align: center;
+  }
+  footer .bottom-footer .bottom-footer__link {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  footer .bottom-footer .bottom-footer__link p {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
