fix buy-section mobile

--- a/product-detail-card/style.css
+++ b/product-detail-card/style.css
@@ -967,6 +967,9 @@ footer .bottom-footer .social-icons img {
   main .card-lang .card-lang__box--fill {
     background-color: #77B032;
   }
+  main .buy-section {
+    display: initial;
+  }
   main .buy-section .buy-section-card {
     display: -webkit-box;
     display: -ms-flexbox;
