--- a/home/style.css
+++ b/home/style.css
@@ -890,10 +890,13 @@ footer .bottom-footer .social-icons img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    overflow: hidden;
+    overflow: scroll;
   }
   nav .nav__link {
     white-space: nowrap;
+  }
+  nav::-webkit-scrollbar {
+    display: none;
   }
   aside {
     background-image: url("..//assets/aside-mobile.png");
