--- a/product-detail-card/style.css
+++ b/product-detail-card/style.css
@@ -809,10 +809,13 @@ footer .bottom-footer .social-icons img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    overflow: hidden;
+    overflow: scroll;
   }
   nav .nav__link {
     white-space: nowrap;
+  }
+  nav::-webkit-scrollbar {
+    display: none;
   }
   main {
     padding: 30px 0 100px 15px;
