--- a/search-result/style.css
+++ b/search-result/style.css
@@ -740,10 +740,13 @@ footer .bottom-footer .social-icons img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    overflow: hidden;
+    overflow: scroll;
   }
   nav .nav__link {
     white-space: nowrap;
+  }
+  nav::-webkit-scrollbar {
+    display: none;
   }
   main {
     padding: 30px 15px 70px 15px;
